QtBeef/src/Qt/qvariant.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QVariant
// --------------------------------------------------------------
[CRepr]
struct QVariant_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QVariant_new")]
	public static extern QVariant_Ptr QVariant_new();
	[LinkName("QVariant_new2")]
	public static extern QVariant_Ptr QVariant_new2(void* type);
	[LinkName("QVariant_new3")]
	public static extern QVariant_Ptr QVariant_new3(void** other);
	[LinkName("QVariant_new4")]
	public static extern QVariant_Ptr QVariant_new4(c_int i);
	[LinkName("QVariant_new5")]
	public static extern QVariant_Ptr QVariant_new5(c_uint ui);
	[LinkName("QVariant_new6")]
	public static extern QVariant_Ptr QVariant_new6(c_longlong ll);
	[LinkName("QVariant_new7")]
	public static extern QVariant_Ptr QVariant_new7(c_ulonglong ull);
	[LinkName("QVariant_new8")]
	public static extern QVariant_Ptr QVariant_new8(bool b);
	[LinkName("QVariant_new9")]
	public static extern QVariant_Ptr QVariant_new9(double d);
	[LinkName("QVariant_new10")]
	public static extern QVariant_Ptr QVariant_new10(float f);
	[LinkName("QVariant_new11")]
	public static extern QVariant_Ptr QVariant_new11(c_char* str);
	[LinkName("QVariant_new12")]
	public static extern QVariant_Ptr QVariant_new12(void** bytearray);
	[LinkName("QVariant_new13")]
	public static extern QVariant_Ptr QVariant_new13(void** bitarray);
	[LinkName("QVariant_new14")]
	public static extern QVariant_Ptr QVariant_new14(libqt_string stringVal);
	[LinkName("QVariant_new15")]
	public static extern QVariant_Ptr QVariant_new15(void** stringlist);
	[LinkName("QVariant_new16")]
	public static extern QVariant_Ptr QVariant_new16(void* qchar);
	[LinkName("QVariant_new17")]
	public static extern QVariant_Ptr QVariant_new17(void* date);
	[LinkName("QVariant_new18")]
	public static extern QVariant_Ptr QVariant_new18(void* time);
	[LinkName("QVariant_new19")]
	public static extern QVariant_Ptr QVariant_new19(void** datetime);
	[LinkName("QVariant_new20")]
	public static extern QVariant_Ptr QVariant_new20(void** list);
	[LinkName("QVariant_new21")]
	public static extern QVariant_Ptr QVariant_new21(void** mapVal);
	[LinkName("QVariant_new22")]
	public static extern QVariant_Ptr QVariant_new22(void** hash);
	[LinkName("QVariant_new23")]
	public static extern QVariant_Ptr QVariant_new23(void** size);
	[LinkName("QVariant_new24")]
	public static extern QVariant_Ptr QVariant_new24(void** size);
	[LinkName("QVariant_new25")]
	public static extern QVariant_Ptr QVariant_new25(void** pt);
	[LinkName("QVariant_new26")]
	public static extern QVariant_Ptr QVariant_new26(void** pt);
	[LinkName("QVariant_new27")]
	public static extern QVariant_Ptr QVariant_new27(void** line);
	[LinkName("QVariant_new28")]
	public static extern QVariant_Ptr QVariant_new28(void** line);
	[LinkName("QVariant_new29")]
	public static extern QVariant_Ptr QVariant_new29(void** rect);
	[LinkName("QVariant_new30")]
	public static extern QVariant_Ptr QVariant_new30(void** rect);
	[LinkName("QVariant_new31")]
	public static extern QVariant_Ptr QVariant_new31(void** locale);
	[LinkName("QVariant_new32")]
	public static extern QVariant_Ptr QVariant_new32(void** re);
	[LinkName("QVariant_new33")]
	public static extern QVariant_Ptr QVariant_new33(void** easing);
	[LinkName("QVariant_new34")]
	public static extern QVariant_Ptr QVariant_new34(void** uuid);
	[LinkName("QVariant_new35")]
	public static extern QVariant_Ptr QVariant_new35(void** url);
	[LinkName("QVariant_new36")]
	public static extern QVariant_Ptr QVariant_new36(void** jsonValue);
	[LinkName("QVariant_new37")]
	public static extern QVariant_Ptr QVariant_new37(void** jsonObject);
	[LinkName("QVariant_new38")]
	public static extern QVariant_Ptr QVariant_new38(void** jsonArray);
	[LinkName("QVariant_new39")]
	public static extern QVariant_Ptr QVariant_new39(void** jsonDocument);
	[LinkName("QVariant_new40")]
	public static extern QVariant_Ptr QVariant_new40(void** modelIndex);
	[LinkName("QVariant_new41")]
	public static extern QVariant_Ptr QVariant_new41(void** modelIndex);
	[LinkName("QVariant_new42")]
	public static extern QVariant_Ptr QVariant_new42(QVariant_Type type);
	[LinkName("QVariant_new43")]
	public static extern QVariant_Ptr QVariant_new43(void* type, void* copyVal);
	[LinkName("QVariant_Delete")]
	public static extern void QVariant_Delete(QVariant_Ptr self);
	[LinkName("QVariant_OperatorAssign")]
	public static extern void QVariant_OperatorAssign(void* self, void** other);
	[LinkName("QVariant_Swap")]
	public static extern void QVariant_Swap(void* self, void** other);
	[LinkName("QVariant_UserType")]
	public static extern c_int QVariant_UserType(void* self);
	[LinkName("QVariant_TypeId")]
	public static extern c_int QVariant_TypeId(void* self);
	[LinkName("QVariant_TypeName")]
	public static extern c_char* QVariant_TypeName(void* self);
	[LinkName("QVariant_MetaType")]
	public static extern void* QVariant_MetaType(void* self);
	[LinkName("QVariant_CanConvert")]
	public static extern bool QVariant_CanConvert(void* self, void* targetType);
	[LinkName("QVariant_Convert")]
	public static extern bool QVariant_Convert(void* self, void* type);
	[LinkName("QVariant_CanView")]
	public static extern bool QVariant_CanView(void* self, void* targetType);
	[LinkName("QVariant_CanConvert2")]
	public static extern bool QVariant_CanConvert2(void* self, c_int targetTypeId);
	[LinkName("QVariant_Convert2")]
	public static extern bool QVariant_Convert2(void* self, c_int targetTypeId);
	[LinkName("QVariant_IsValid")]
	public static extern bool QVariant_IsValid(void* self);
	[LinkName("QVariant_IsNull")]
	public static extern bool QVariant_IsNull(void* self);
	[LinkName("QVariant_Clear")]
	public static extern void QVariant_Clear(void* self);
	[LinkName("QVariant_Detach")]
	public static extern void QVariant_Detach(void* self);
	[LinkName("QVariant_IsDetached")]
	public static extern bool QVariant_IsDetached(void* self);
	[LinkName("QVariant_ToInt")]
	public static extern c_int QVariant_ToInt(void* self);
	[LinkName("QVariant_ToUInt")]
	public static extern c_uint QVariant_ToUInt(void* self);
	[LinkName("QVariant_ToLongLong")]
	public static extern c_longlong QVariant_ToLongLong(void* self);
	[LinkName("QVariant_ToULongLong")]
	public static extern c_ulonglong QVariant_ToULongLong(void* self);
	[LinkName("QVariant_ToBool")]
	public static extern bool QVariant_ToBool(void* self);
	[LinkName("QVariant_ToDouble")]
	public static extern double QVariant_ToDouble(void* self);
	[LinkName("QVariant_ToFloat")]
	public static extern float QVariant_ToFloat(void* self);
	[LinkName("QVariant_ToReal")]
	public static extern double QVariant_ToReal(void* self);
	[LinkName("QVariant_ToByteArray")]
	public static extern void* QVariant_ToByteArray(void* self);
	[LinkName("QVariant_ToBitArray")]
	public static extern void* QVariant_ToBitArray(void* self);
	[LinkName("QVariant_ToString")]
	public static extern libqt_string QVariant_ToString(void* self);
	[LinkName("QVariant_ToStringList")]
	public static extern void* QVariant_ToStringList(void* self);
	[LinkName("QVariant_ToChar")]
	public static extern void* QVariant_ToChar(void* self);
	[LinkName("QVariant_ToDate")]
	public static extern void* QVariant_ToDate(void* self);
	[LinkName("QVariant_ToTime")]
	public static extern void* QVariant_ToTime(void* self);
	[LinkName("QVariant_ToDateTime")]
	public static extern void* QVariant_ToDateTime(void* self);
	[LinkName("QVariant_ToList")]
	public static extern void* QVariant_ToList(void* self);
	[LinkName("QVariant_ToMap")]
	public static extern void* QVariant_ToMap(void* self);
	[LinkName("QVariant_ToHash")]
	public static extern void* QVariant_ToHash(void* self);
	[LinkName("QVariant_ToPoint")]
	public static extern void* QVariant_ToPoint(void* self);
	[LinkName("QVariant_ToPointF")]
	public static extern void* QVariant_ToPointF(void* self);
	[LinkName("QVariant_ToRect")]
	public static extern void* QVariant_ToRect(void* self);
	[LinkName("QVariant_ToSize")]
	public static extern void* QVariant_ToSize(void* self);
	[LinkName("QVariant_ToSizeF")]
	public static extern void* QVariant_ToSizeF(void* self);
	[LinkName("QVariant_ToLine")]
	public static extern void* QVariant_ToLine(void* self);
	[LinkName("QVariant_ToLineF")]
	public static extern void* QVariant_ToLineF(void* self);
	[LinkName("QVariant_ToRectF")]
	public static extern void* QVariant_ToRectF(void* self);
	[LinkName("QVariant_ToLocale")]
	public static extern void* QVariant_ToLocale(void* self);
	[LinkName("QVariant_ToRegularExpression")]
	public static extern void* QVariant_ToRegularExpression(void* self);
	[LinkName("QVariant_ToEasingCurve")]
	public static extern void* QVariant_ToEasingCurve(void* self);
	[LinkName("QVariant_ToUuid")]
	public static extern void* QVariant_ToUuid(void* self);
	[LinkName("QVariant_ToUrl")]
	public static extern void* QVariant_ToUrl(void* self);
	[LinkName("QVariant_ToJsonValue")]
	public static extern void* QVariant_ToJsonValue(void* self);
	[LinkName("QVariant_ToJsonObject")]
	public static extern void* QVariant_ToJsonObject(void* self);
	[LinkName("QVariant_ToJsonArray")]
	public static extern void* QVariant_ToJsonArray(void* self);
	[LinkName("QVariant_ToJsonDocument")]
	public static extern void* QVariant_ToJsonDocument(void* self);
	[LinkName("QVariant_ToModelIndex")]
	public static extern void* QVariant_ToModelIndex(void* self);
	[LinkName("QVariant_ToPersistentModelIndex")]
	public static extern void* QVariant_ToPersistentModelIndex(void* self);
	[LinkName("QVariant_Load")]
	public static extern void QVariant_Load(void* self, void** ds);
	[LinkName("QVariant_Save")]
	public static extern void QVariant_Save(void* self, void** ds);
	[LinkName("QVariant_Type")]
	public static extern QVariant_Type QVariant_Type(void* self);
	[LinkName("QVariant_TypeToName")]
	public static extern c_char* QVariant_TypeToName(c_int typeId);
	[LinkName("QVariant_NameToType")]
	public static extern QVariant_Type QVariant_NameToType(c_char* name);
	[LinkName("QVariant_Data")]
	public static extern void* QVariant_Data(void* self);
	[LinkName("QVariant_ConstData")]
	public static extern void* QVariant_ConstData(void* self);
	[LinkName("QVariant_Data2")]
	public static extern void* QVariant_Data2(void* self);
	[LinkName("QVariant_SetValue")]
	public static extern void QVariant_SetValue(void* self, void** avalue);
	[LinkName("QVariant_Compare")]
	public static extern void* QVariant_Compare(void** lhs, void** rhs);
	[LinkName("QVariant_ToInt1")]
	public static extern c_int QVariant_ToInt1(void* self, bool* ok);
	[LinkName("QVariant_ToUInt1")]
	public static extern c_uint QVariant_ToUInt1(void* self, bool* ok);
	[LinkName("QVariant_ToLongLong1")]
	public static extern c_longlong QVariant_ToLongLong1(void* self, bool* ok);
	[LinkName("QVariant_ToULongLong1")]
	public static extern c_ulonglong QVariant_ToULongLong1(void* self, bool* ok);
	[LinkName("QVariant_ToDouble1")]
	public static extern double QVariant_ToDouble1(void* self, bool* ok);
	[LinkName("QVariant_ToFloat1")]
	public static extern float QVariant_ToFloat1(void* self, bool* ok);
	[LinkName("QVariant_ToReal1")]
	public static extern double QVariant_ToReal1(void* self, bool* ok);
}
